# py-rotaeno-stablizer-gui

./: .gitignore  .pre-commit-config.yaml  README.md  config.toml  main.py  pyproject.toml  readme_url_replace.py  requirements.txt  requirements_gui.txt  rotate_cmd.md  utils.py
.github/ISSUE_TEMPLATE/: bug-report.md  bug.yml  feature.yml
.github/workflows/: build.yml  release.yml
docs_image/: no_auto_crop.avif  no_circle_crop.avif  no_display_all.avif  normal.avif  with_backgrond.avif
rotaeno_stablizer/: __init__.py  __main__.py  background.py  cli.py  config.py  ffmpeg.py  gui.py  log.py  rotation_calc.py  utils.py
standalone_tools/: opencv-setup-hack.py  rotaeno_stablizer_gui.py
