[project]
authors = [
  {name = "I Love Study", email = "ilstudy@qq.com"},
]
dependencies = [
    "rich>=13.7.1",
    "rich-argparse>=1.4.0",
    "pillow>=11.0.0",
    "rtoml>=0.11.0; python_version<\"3.11\""
]
description = "Default template for PDM package"
license = {text = "LGPL-3.0"}
name = "py-rotaeno-stablizer-gui"
readme = "README.md"
requires-python = ">=3.10"
version = "0.2.0"

[dependency-groups]
dev = [
    "viztracer>=0.16.2", # performance
    "nuitka>=2.1.3", # packaging
    "yapf>=0.40.2", # formatter
]

[project.optional-dependencies]
gui = [
    "customtkinter>=5.2.2",
    "CTkTable>=1.1",
    "CTkMessagebox>=2.7"
]

[tool.pdm]
distribution = true