[project]
authors = [
  {name = "I Love Study", email = "ilstudy@qq.com"},
]
dependencies = [
    "rich>=13.7.1",
    "rich-argparse>=1.4.0",
    "pillow>=11.0.0",
    "rtoml>=0.11.0; python_version<\"3.11\""
]
description = "Rotaeno Stablizer with high performance"
license = "LGPL-3.0-or-later"
name = "rotaeno-stablizer"
readme = "README.md"
requires-python = ">=3.10"
version = "1.0.1"

[dependency-groups]
dev = [
    "viztracer>=0.16.2", # performance
    "nuitka>=2.1.3", # packaging
    "yapf>=0.40.2", # formatter
    "imageio>=2.37.0", # package icon
    "yarl>=1.20.1", # URL solver
    "markdown-it-py>=3.0.0", # Markdowner parser
    "mdformat>=0.7.22" # Markdown render
]

[project.optional-dependencies]
gui = [
    "customtkinter>=5.2.2",
    "CTkTable>=1.1",
    "CTkMessagebox>=2.7",
    "CTkMenuBar>=0.8"
]

[options]
include_package_data = true

[options.package_data]
rotation_stablizer = ["rotaeno_stablizer/*.png"]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["rotaeno_stablizer"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"